# don-cheli-sdd

./: .cursorrules  .cursorrules.es  .cursorrules.pt  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.en.md  CLAUDE.md  CLAUDE.pt.md  CODE_OF_CONDUCT.md  CONTRIBUIR.md  CONTRIBUTING.md  DESIGN.md  GEMINI.es.md  GEMINI.md  GEMINI.pt.md  LICENCIA  NOTICE  PRODUCT.md  README.en.md  README.es.md  README.md  README.pt.md  SECURITY.md  action.yml  demo.tape  opencode.json  package.json  prompt.md
.claude-plugin/: marketplace.json  plugin.json
.dc/: config.yaml  estado.md
.github/: pull_request_template.md
.opencode/: README.md
comandos/: bucle.md
docs/: benchmark-posts-verified.md  certification.md  ci-cd.md  custom-gates.md  guia-memory-claude-code.md  index.html  social-benchmark-posts.md  social-media-kit.md  telemetry.md  windows-wsl2.md
examples/: README.md
ganchos/: parar.md  post-herramienta.md
locales/: en.json  es.json  pt.json
plantillas/: estimado-desarrollo.md
reglas/: completeness.md  constitucion.md  hooks-parar.md  i18n.md  protocolo-debugging.md  puertas-calidad.md  reglas-desviacion.md  reglas-trabajo-globales.md  skills-best-practices.md
runtime/: Dockerfile  package-lock.json  package.json  (+1 more)
studio/backend/: Cargo.toml
studio/backend/src/: main.rs
studio/backend/src/api/: artifacts.rs  costs.rs  filesystem.rs  mod.rs  phases.rs  pipeline.rs  projects.rs  runs.rs
studio/backend/src/db/: mod.rs
studio/backend/src/runtime/: bridge.rs
studio/backend/src/state/: watcher.rs
studio/backend/src/ws/: mod.rs  stream.rs
studio/src-tauri/: Cargo.toml  tauri.conf.json
studio/src-tauri/src/: lib.rs  main.rs
studio/src-tauri/src/cmd/: mod.rs
studio/src-tauri/src/db/: mod.rs
studio/src-tauri/src/runtime/: mod.rs
(+689 files in other folders)
